deploymentBackend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: portfolio
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend-container
        image: chaymae888/my-backend
        ports:
        - containerPort: 8080
