statefulSet.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
  namespace: portfolio
spec:
  replicas: 2
  serviceName: "db"
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: postgres-container
        image: chaymae888/my-postgres:1.0
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: db-data
          mountPath: /var/lib/postgresql/data
        resources:
          requests:
            cpu: "500m"     # Demande de 0.5 CPU
            memory: "1Gi"   # Demande de 1 Go de mémoire
          limits:
            cpu: "1"        # Limite de 1 CPU
            memory: "2Gi"   # Limite de 2 Go de mémoire
  volumeClaimTemplates:
  - metadata:
      name: db-data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 5Gi
